style.css
@font-face {
  font-family: 'FiraSans';
  src: url('assets/FiraSans-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'FiraSans';
  src: url('assets/FiraSans-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'FiraSans';
  src: url('assets/FiraSans-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

body {
  font-family: 'FiraSans', sans-serif;
  font-weight: normal;
  background-color: #282828;
  /* Gruvbox Dark background */
  color: #ebdbb2;
  /* Gruvbox Dark text */
  line-height: 1.6;
  margin: 0;
  padding: 0;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 20px;

}

@media (min-width: 1200px) {
  .container {
    padding-left: 50px;
    padding-right: 50px;
  }
}

h1 {
  font-family: 'FiraSans', sans-serif;
  font-weight: 600;
  color: #fb4934;
  /* Gruvbox Dark red */
}

h2 {
  font-family: 'FiraSans', sans-serif;
  color: #d65d0e;
}

h3 {
  color: #fe8019;
}

h2.download {
  color: #ebdbb2;
  /* Gruvbox Dark text */
}

h2.prog_header {
  font-size: 2em;
  /*  Увеличение размера относительно базового */
  font-weight: bold;
  /*  Жирный шрифт */
}

a {
  color: #b8bb26;
  /* Gruvbox Dark green */
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

th,
td {
  border: 1px solid #3c3836;
  /* Gruvbox Dark dark gray */
  padding: 10px;
  text-align: left;
}

th {
  background-color: #504945;
  color: #ebdbb2;
}

img {
  max-width: 90%;
  height: auto;
  margin: 10px 0;
  border: 1px solid #3c3836;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
}

.img_container {
  max-width: 1600px;
  margin: 20px auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  grid-gap: 10px;
  box-sizing: border-box;
}

img.screenshot {
  max-width: 80%;
  height: auto;
  margin-bottom: 20px;
  border: 1px solid #3c3836;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  transition: transform 0.3s ease;
  object-fit: contain;
}

img.screenshot.enlarged {
  max-width: 130%;
  height: auto;
  margin: 20px auto;
  margin-bottom: 20px;
  border: 1px solid #3c3836;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  transition: transform 0.3s ease;
  object-fit: contain;
}

img.rounded-img {
  border-radius: 10px;
}

nav {
  position: sticky;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  display: flex;
  align-items: center;
  justify-content: space-between;
  backdrop-filter: blur(10px);
  background-color: rgba(60,56,54,0.7);
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

nav li {
  margin: 0 10px;
}

nav a {
  color: #ebdbb2;
  text-decoration: none;
}

nav a:hover {
  text-decoration: underline;
}

.logo {
  display: flex;
  align-items: center;
}

.logo img {
  margin-left: 10px;
  margin-right: 10px;
}

.logo h1 {
  display: inline-block;
}

.menu-toggle {
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-80%);
  display: none;
}

.menu-toggle span {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px;
  background-color: #ebdbb2;
}

/* Медиа-запрос для мобильных устройств */
@media (max-width: 768px) {
  nav {
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
  }

  .nav-inner {
    flex-direction: row;
    justify-content: space-between;
  }

  nav ul {
    flex-direction: column;
    align-items: flex-start;
    display: none;
  }

  nav li {
    margin: 5px 0;
  }

  nav ul {
    display: none;
  }

  nav ul.show {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: #3c3836;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  }

  nav ul.show li {
    margin: 5px 20px 5px 20px;
  }

  .logo img {
    margin-bottom: 10px;
  }

  .menu-toggle {
    display: block;
    margin: 10px 0 10px 10px;
  }
}

footer {
  margin-top: 30px;
  text-align: center;
  padding: 10px;
  background-color: #3c3836;
  color: #ebdbb2;
}

footer a {
  margin: 0 10px;
}

.enlarged {
  transform: scale(1.1);
  transition: transform 0.3s ease;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
}

figure {
  display: flex;
  flex-direction: column;
  align-items: center;
}

figcaption {
  margin-top: 5px;
  text-align: center;
  font-size: 0.9em;
  color: #a89984;
}

.download-container {
  max-width: 800px;
  text-align: center;
  padding: 20px;
  background-color: #3c3836;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  color: #ebdbb2;
  margin: 50px auto;
  flex: 0 0 auto;
  font-family: 'FiraSans', sans-serif;
}

.download-button {
  font-family: 'FiraSans', sans-serif;
  display: inline-block;
  padding: 15px 30px;
  margin: 10px 0;
  background-color: #458588;
  color: #282828;
  text-decoration: none;
  border-radius: 5px;
  transition: background-color 0.3s ease;
  /* margin-right: 10px; */
  text-decoration: none;
  width: 250px;
  text-align: center;
}

.download-button:hover {
  background-color: #83a598;
  text-decoration: none;
}

.alternative-downloads {
  display: flex;
  justify-content: center;
  gap: 10px;
  color: #ebdbb2;
}

.alternative-download {
  text-decoration: none;
  margin-right: 10px;
}

.info-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-top: 50px;
}

.column {
  flex: 1;
  padding: 20px;
  border-radius: 5px;
  min-width: 300px;
  margin-bottom: 20px;
  color: #ebdbb2;
}

.column ul {
  list-style: disc;
  padding-left: 20px;
  color: #ebdbb2;
}

.page-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.main-container {
  display: flex;
  flex-direction: column;
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

.main-downl-container {
  display: flex;
  flex-direction: column;
  /* max-width: 800px; */
  /* margin: 0 auto; */
  height: 450px;
  padding: 30px;
  background-image: url('./assets/Morskie-Oko.webp');
  background-size: cover;
  background-repeat: no-repeat;
}

.intro-container {
  float: left;
  margin-right: 70px;
  box-sizing: border-box;
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
}

.intro-container>p {
  max-width: 60%;
  box-sizing: border-box;
}

.download-button-container {
  float: right;
  /*width: 200px; /* Ширина контейнера с кнопкой */
}

blockquote {
  background-color: #3c3836;
  border-left: 8px solid #b8bb26;
  color: #ebdbb2;
  padding: 1.5em 2em;
  margin: 2em 0;
  border-radius: 5px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.advantages-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 20px;
}

.advantage-tile {
  background-color: #3c3836;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.advantage-tile h3 {
  margin-top: 0;
  color: #ebdbb2;
  font-weight: bold;
}

.advantage-tile p {
  color: #a89984;
  line-height: 1.5;
}

/* Дополнительный стиль для адаптации под меньшие экраны (опционально) */
@media (max-width: 768px) {
  .advantages-grid {
    grid-template-columns: 1fr;
  }
}

